CHANGES
=======

Version 0.1.6 (2010-??-??)
--------------------------

  - Supports Google App Engine SDK 1.3.7.

    - Support for automatic thumbnailing.

  - Implements Channel API backed by NGINX push module.

  - Adds appcfg upload support.

  - Adds process monitor for automatically restarting appserver processes
    consuming more than a given amount of memory that is held in RAM (RSS).

  - Appserver imports and initializes API proxy stubs for various service
    backends only when needed.

  - Updated Web Socket Service to provide the latest Web Socket Protocol.

    - http://code.google.com/p/typhoonae/issues/detail?id=52

  - Removed obsolete service for sequential integer ids and so eliminated a
    typical 'Single Point Of Failure'.

  - Fixes an issue where spaces in application paths caused failures on
    startup.

    - http://code.google.com/p/typhoonae/issues/detail?id=62

  - Fixes issues where develop mode didn't work.

    - http://code.google.com/p/typhoonae/issues/detail?id=63
    - http://code.google.com/p/typhoonae/issues/detail?id=64

  - Fixes an issue where the Capability API did not work with remote Datastore
    configuration.

    - http://code.google.com/p/typhoonae/issues/detail?id=65

  - Fixes a critical issue where an application hangs if the connection to the
    MySQL database server is temporarily lost.

    - http://code.google.com/p/typhoonae/issues/detail?id=67

  - Incrementing Memcache values now allows initial values to be used if the
    key does not yet exist in the cache.

    - http://code.google.com/p/typhoonae/issues/detail?id=70

  - Fixes a compatibility issue with adding new tasks.

    - http://code.google.com/p/typhoonae/issues/detail?id=71


Version 0.1.5 (2010-07-09)
--------------------------

  - Supports Google App Engine SDK 1.3.5.

  - Introducing MySQL backed Datastore.

  - Added support for configuring and running multiple applications.
