@@ -11,6 +11,7 @@ parts =
     mongodb
     bdbdatastore
     rabbitmq
+    celery
     ejabberd
     ejabberd-config
     demo
@@ -78,6 +79,19 @@ cmds =
 recipe = rod.recipe.rabbitmq
 url = http://www.rabbitmq.com/releases/rabbitmq-server/v1.7.2/rabbitmq-server-1.7.2.tar.gz
 
+[celery]
+recipe = zc.recipe.egg
+eggs =
+    celery
+    ${typhoonae:eggs}
+extra-paths =
+    ${typhoonae:extra-paths}
+scripts =
+    celerybeat
+    celeryd
+    celeryev
+    celery_multi
+
 [ejabberd]
 recipe = rod.recipe.ejabberd
 url = http://www.process-one.net/downloads/ejabberd/2.1.3/ejabberd-2.1.3.tar.gz
@@ -100,12 +114,14 @@ eggs =
     bdbdatastore
     typhoonae [amqp]
     typhoonae [appcfg]
+    typhoonae [celery]
     typhoonae [memcached]
     typhoonae [mongo]
     typhoonae [mysql]
     typhoonae [websocket]
     typhoonae [xmpp]
 extra-paths =
+    ${buildout:directory}/etc
     ${buildout:directory}/parts/google_appengine
     ${buildout:directory}/parts/google_appengine/lib/antlr3
     ${buildout:directory}/parts/google_appengine/lib/django
