@@ -31,7 +31,9 @@ smtp_password =
 ssl_certificate =
 ssl_certificate_key =
 ssl_enabled = False
+task_time_limit = 0
 upload_url = upload
+use_celery = False
 var = $VAR
 verbose = False
 xmpp_host = $HOSTNAME
