@@ -4,6 +4,9 @@ MySQL-python = 1.2.3c1
 Pygments = 1.3.1
 Sphinx = 0.6.7
 amqplib = 0.6.1
+anyjson = 0.2.5
+carrot = 0.10.6
+celery = 2.0.3
 collective.recipe.cmd = 0.5
 collective.recipe.template = 1.8
 coverage = 3.3.1
@@ -11,17 +14,21 @@ docutils = 0.7
 elementtree = 1.2.7-20070827-preview
 fcgiapp = 1.4
 gocept.nginx = 0.9.4
+importlib = 1.0.2
 meld3 = 0.6.7
 nose = 0.11.4
 pycurl = 7.16.2.1
 pylibmc = 1.1.1
 pymongo = 1.9
+pyparsing = 1.5.5
+python-dateutil = 1.5
 rod.recipe.appengine = 1.6.2
 rod.recipe.ejabberd = 1.1.3
 rod.recipe.mongodb = 1.2.1
 rod.recipe.rabbitmq = 1.1.4
 setuptools = 0.6c9
 simplejson = 2.1.1
+sqlalchemy = 0.6.4
 superlance = 0.5
 supervisor = 3.0a8
 tornado = 1.0
