@@ -371,6 +371,9 @@ def main():
                        "(no leading '/')",
                   default='upload/')
 
+    op.add_option("--use_celery", dest="use_celery", action="store_true",
+                  help="use Celery as Task Queue backend", default=False)
+
     op.add_option("--xmpp_host", dest="xmpp_host", metavar="ADDR",
                   help="use this XMPP/Jabber host", default='localhost')
 
