@@ -15,6 +15,8 @@ Version 0.1.6 (2010-??-??)
   - Adds process monitor for automatically restarting appserver processes
     consuming more than a given amount of memory that is held in RAM (RSS).
 
+  - Using Celery as alternative Task Queue backend.
+
   - Appserver imports and initializes API proxy stubs for various service
     backends only when needed.
 
